--- a/week1/style.css
+++ b/week1/style.css
@@ -27,7 +27,7 @@
 /* -------------------- */
 
 .main__nav {
-  flex: 1.1;
+  flex: 0.9;
 
   height: 80px;
   
@@ -42,6 +42,8 @@
 }
 
 .main__nav .main__nav-title {
+  text-align: center;
+  
   font-size: 15px;
   font-weight: 600;
 }
