--- a/week1/reset.css
+++ b/week1/reset.css
@@ -41,6 +41,10 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+button {
+  outline: none;
+  border: none;
+}
 
 .visually_hidden {
   height: 1px;
