--- a/week1/style.css
+++ b/week1/style.css
@@ -43,7 +43,7 @@
 
 .main__nav .main__nav-title {
   text-align: center;
-  
+
   font-size: 15px;
   font-weight: 600;
 }
@@ -79,7 +79,7 @@
   display: flex;
   flex-wrap: wrap;
 
-  margin: 1rem;
+  margin: 15px;
 }
 
 .main__lists .main__list {
@@ -125,7 +125,54 @@
 .main__cart {
   flex: 1.5;
 
-  margin: 1rem;
-  
-  
+  height: 100%;
+
+  margin: 15px;
+  padding: 10px;
+
+  background-color: salmon;
+}
+
+.main__cart .main__cart-title {
+  margin-bottom: 30px;
+
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.main__cart .main__cart-line {
+  width: clac(100% - 10px);
+  height: 2px;
+
+  margin: 30px auto;
+
+  background-color: aliceblue;
+
+}
+
+.main__cart .main__cart-button-wrapper {
+  display: flex;
+  justify-content: center;
+
+  gap: 10px;
+}
+
+.main__cart .main__cart-button {
+  width: 100px;
+  height: 25px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  border-radius: 5px;
+
+  background-color: aliceblue;
+}
+
+.main__cart .main__cart-button:hover {
+  color: whitesmoke;
+  background-color: skyblue;
+
+  cursor: pointer;
 }
