--- a/week1/style.css
+++ b/week1/style.css
@@ -113,7 +113,8 @@
   justify-content: center;
 }
 
-.main__lists .main__list-text-wrapper .main__list-text {
+.main__lists .main__list-text-wrapper .main__list-text,
+.main__lists .main__list-text-wrapper .main__list-price {
   margin-bottom: 5px;
 
   font-size: 16px;
