[feat] change background color when hover

--- a/week1/style.css
+++ b/week1/style.css
@@ -95,6 +95,8 @@
 
 .main__lists .main__list:hover {
   cursor: pointer;
+  
+  background-color: aquamarine;
 }
 
 .main__lists .main__list:nth-child(2n) {
